<resources>
    <string name="app_name">Employe_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_name">Nama</string>
    <string name="str_email">Email</string>
    <string name="str_address">Alamat</string>
    <string name="str_birthDate">Tanggal Lahir</string>
    <string name="str_phoneNumber">Nomor Telepon</string>
    <string name="str_gender">Jenis Kelamin</string>
    <string name="str_edit_page">Halaman Edit</string>
    <string name="str_detail_page">Halaman Detail</string>
    <string name="str_save">Simpan</string>
    <string name="str_add_page">Tambah Data Pegawai</string>
    <string-array name="gender_array">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

</resources>